add code: the proposed model - AlexNet_S

--- a/AlexNet_S.ipynb
+++ b/AlexNet_S.ipynb
@@ -684,6 +684,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Note: \n",
+    "As the model has two dropout layers, every time it will remove 40% nodes to train, therefore, we get different train_acc val_acc test_acc each time. \n",
+    "But the results varies in a very small range."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
